[package]
name = "betting"
version = "0.2.0"
edition = "2021"
description = "A crate to manage twitch-style bets (aka 'Parimutuel betting')"
license = "Unlicense"
repository = "https://github.com/Inspirateur/betting"
keywords = ["bets", "betting", "prediction", "wager", "outcome"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.28", features = ["bundled"] }
itertools = "0.10"
thiserror = "1.0"
[dev-dependencies]
diesel_cli = {}